--- a/PP_Lab_3/PP_Lab_3.csproj
+++ b/PP_Lab_3/PP_Lab_3.csproj
@@ -53,6 +53,7 @@
       <DependentUpon>FormMain.cs</DependentUpon>
     </Compile>
     <Compile Include="Particle.cs" />
+    <Compile Include="ParticleWithCoord.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FormMain.resx">
