Створення класу користувача. Реалізація підключення та відключення від серверу. Задання кольору для різних операцій для різноманіття :)

--- a/PP__Lab_5/PP__Lab_5.csproj
+++ b/PP__Lab_5/PP__Lab_5.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="User.cs" />
     <Compile Include="UserForm.cs">
       <SubType>Form</SubType>
     </Compile>
