Створення бібліотеки Data для опрацювання даних, которі пересилаються мережею. Реалізація пакування та розпакування пакетів інформації + кодування/декодування даних. Також було створено бібліотеку NetworkingLib для вирішення мережевих нюансів.

--- a/PP__Lab_5/User.csproj
+++ b/PP__Lab_5/User.csproj
@@ -80,6 +80,16 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Data\Data.csproj">
+      <Project>{f81642ce-9858-4927-958e-e0488bec8cbb}</Project>
+      <Name>Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\NetworkLib\NetworkLib.csproj">
+      <Project>{c687601a-6087-43f3-be81-5c3214748363}</Project>
+      <Name>NetworkLib</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
